# tzpuFusionX

./: .gitattributes  .gitignore  .gitmodules  README.md
CPLD/v1.0/MZ2000/: tzpuFusionX.vhd  tzpuFusionX_Toplevel.vhd  tzpuFusionX_pkg.vhd
CPLD/v1.0/MZ700/: tzpuFusionX.vhd  tzpuFusionX_Toplevel.vhd  tzpuFusionX_pkg.vhd
CPLD/v1.0/MZ80A/: tzpuFusionX.vhd  tzpuFusionX_Toplevel.vhd  tzpuFusionX_pkg.vhd
CPLD/v1.0/PCW8256/: tzpuFusionX.vhd  tzpuFusionX_Toplevel.vhd  tzpuFusionX_pkg.vhd
docs/: IDO_SOM2D02_Pinout.xlsx  SSD201_HW_Checklist_V10.xlsx  SigmaStar_USB_Programmer.docx
pcb/FusionX/v1.0/: FusionX_v1_0_BOM.html
software/FusionX/: start_FusionX.sh
software/FusionX/etc/: cpuset.sh  fb.sh  startZ80_RFS.sh  startZ80_TZFS.sh  testgpio.sh  z80drv.sh
software/FusionX/modules/: ttymzdrv.ko  z80drv.ko
software/FusionX/src/z80drv/: CMakeLists.txt  Makefile  README.txt  Z80.c
software/FusionX/src/z80drv/MZ2000/: z80ctrl.c  z80io_test.c  z80menu.h
software/FusionX/src/z80drv/MZ700/: z80ctrl.c
software/FusionX/src/z80drv/MZ80A/: k64fcpu.c  sharpbiter.c  tzpu.h  z80ctrl.c  z80driver.c  z80driver.h  z80io.c  z80io.h  z80vhw_rfs.c  z80vhw_tzpu.c
software/FusionX/src/z80drv/src/: emumz.c  k64fcpu.c  sharpbiter.c  sharpmz.c  tzpu.h  z80ctrl.c  z80driver.c  z80driver.h  z80io.h  z80io_test.c  z80vhw_mz1500.c  z80vhw_mz2000.c  z80vhw_mz700.c  z80vhw_mz80a.c  z80vhw_pcw.c  z80vhw_rfs.c  z80vhw_tzpu.c
software/FusionX/testapps/: MyPlayer  bademo.sh  bootanimation  disp_init  dispdemo.sh  jpegdemo.sh  logo  spi  zkfsdemo.sh  zkgui
software/WebServer/: Makefile  WebServer.cpp  build_webfs.sh  start_WebServer.sh
software/WebServer/conf/: server.crt  server.csr  server.key  server.key.orig
software/WebServer/webserver/: index.html  keymap.html  mouse.html  ota.html  ota.html.bak  wifimanager.html  wifimanager.html.bak
software/asm/: mz2000_ipl.orig.asm  sa1510.asm
software/linux/: Build_FusionX.sh
software/linux/boot/: boot.config  ms_gen_mvxv_h.py
software/linux/buildroot/: .config
software/tools/: dz80
(+326 files in other folders)
